--- a/act_Application/wwwroot/css/tablaAportaciones.css
+++ b/act_Application/wwwroot/css/tablaAportaciones.css
@@ -4,8 +4,7 @@
 
 .table-container {
     overflow: scroll;
-    height: 100%;
-    width: 100%;
+    height: 550px;
 }
 .aportacion-table {
     border-collapse: collapse;
