--- a/act_Application/Views/ActRols/Delete.cshtml
+++ b/act_Application/Views/ActRols/Delete.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/eliminar.css" />
+    <link rel="stylesheet" href="/css/Administracion/estiloEliminar.css" />
 </head>
 <h1>Eliminar Rol</h1>
 <hr />
@@ -29,7 +29,7 @@
 <div class="btn-container">
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Eliminar" class="btn-delite" />
+        <input type="submit" value="Eliminar" class="btn-delete" />
         <a class="btn-return" asp-action="Index">Regresar</a>
     </form>
 </div>
