--- a/act_Application/Views/ActTransacciones/Delete.cshtml
+++ b/act_Application/Views/ActTransacciones/Delete.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/eliminar.css" />
+    <link rel="stylesheet" href="/css/Administracion/estiloEliminar.css" />
 </head>
 <div class="content-text">
     <h1>Eliminar Transacciones</h1>
