--- a/act_Application/Views/ActTransacciones/Edit.cshtml
+++ b/act_Application/Views/ActTransacciones/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 <header>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/formularioEdicion.css" />
+    <link rel="stylesheet" href="/css/Administracion/estiloEditarCrear.css" />
 </header>
 <div class="content-text">
     <h1>Editar Transacciones</h1>
