--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - act_Application</title>
-    <link rel="stylesheet" href="/css/navBar.css">
+    <link rel="stylesheet" href="/css/General/Complementos/navBar.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
