--- a/act_Application/Views/TablaAportaciones/Index.cshtml
+++ b/act_Application/Views/TablaAportaciones/Index.cshtml
@@ -9,7 +9,7 @@
 <header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/tablaAportaciones.css">
+    <link rel="stylesheet" href="/css/General/tablaAportaciones.css">
 </header>
 <body>
     <div class="content-text">
