--- a/act_Application/wwwroot/css/homeLogin.css
+++ b/act_Application/wwwroot/css/homeLogin.css
@@ -18,7 +18,7 @@
 }
 
 .side-image {
-    background-image: url("../img/universo.jpg");
+    background-image: url("/img/universo.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
