--- a/act_Application/wwwroot/css/tablaAportaciones.css
+++ b/act_Application/wwwroot/css/tablaAportaciones.css
@@ -4,7 +4,8 @@
 
 .table-container {
     overflow: scroll;
-    height: 550px;
+    max-height: 385px;
+    margin-left: 25px;
 }
 .aportacion-table {
     border-collapse: collapse;
