--- a/act_Application/Views/Login/Index.cshtml
+++ b/act_Application/Views/Login/Index.cshtml
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/homeLogin.css" />
+    <link rel="stylesheet" href="/css/General/Complementos/ventanModal.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="/js/msjerrCorreoValidacion.js"></script>
 </head>
 <title>Inicio de Sesion</title>
 <body>
@@ -29,12 +31,12 @@
                                 <input type="text" class="input" id="email" required="" autocomplete="off" name="Correo">
                                 <label for="email">Email</label>
                             </div>
+
                             <div class="input-field">
                                 <input type="password" class="input" id="pass" required="" name="Contrasena">
                                 <label for="pass">Password</label>
                             </div>
                             <div class="input-field">
-
                                 <input type="submit" class="submit" value="Log in here">
                             </div>
                         </form>
@@ -46,4 +48,13 @@
             </div>
         </div>
     </div>
+
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>@ViewBag.ErrorMessage</p>
+        </div>
+    </div>
+
 </body>
+
