--- a/act_Application/Views/ActMultas/Delete.cshtml
+++ b/act_Application/Views/ActMultas/Delete.cshtml
@@ -24,6 +24,14 @@
             <td class="titulo">Id del Usuario</td>
             <td class="texto">@Html.DisplayFor(model => model.IdAportacion)</td>
         </tr>
+        <tr>
+            <td class="titulo">Valor</td>
+            <td class="texto">@Html.DisplayFor(model => model.Valor)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Fecha de la Multa</td>
+            <td class="texto">@Html.DisplayFor(model => model.FechaMulta)</td>
+        </tr>
     </table>
 </div>
 <div class="btn-container">
