--- a/act_Application/Views/ActAportaciones/Create.cshtml
+++ b/act_Application/Views/ActAportaciones/Create.cshtml
@@ -36,7 +36,11 @@
                     <label asp-for="FechaAportacion" class="control-label">Fecha de la Aportacion</label>
                     <input asp-for="FechaAportacion" class="form-control" />
                     <span asp-validation-for="FechaAportacion" class="text-danger"></span>
+                    @{
+                        act_Application.Logica.ComplementosLogicos.ObtenerCuadrante.CalcularCuadrantesAportacione(Model);
+                    }
                 </div>
+
                 <div class="form-group">
                     <label asp-for="Aprobacion" class="control-label">Aprobacion</label>
                     <input asp-for="Aprobacion" class="form-control" />
