tabla multas sin css

--- a/act_Application/Views/TablaMultas/Index.cshtml
+++ b/act_Application/Views/TablaMultas/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Globalization;
 @using act_Application.Data.Data;
+@model IEnumerable<act_Application.Models.ActMulta>;
 @{
     ViewData["Title"] = "Tabla de Multas";
     var multaRepository = new MultaRepository();
