--- a/act_Application/Views/TablaAportaciones/Index.cshtml
+++ b/act_Application/Views/TablaAportaciones/Index.cshtml
@@ -9,7 +9,7 @@
 <header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/tablaAportaciones.css">
+    <link rel="stylesheet" href="/css/General/tablaAportaciones.css">
     <script src="~/js/mensajeAportantes.js"> </script>
 </header>
 <body>
@@ -43,8 +43,8 @@
                                     var mensajeSinAportes = $"\"{aportacion.Key}\" no realizó aportes este mes";
 
                                     var mensajeConAportes = detallesAportaciones != null && detallesAportaciones.Count > 1
-                                    ? $"Total de Aportaciones: {valor.ToString("N2")}.\n\"{aportacion.Key}\" realizó {detallesAportaciones.Count} aportaciones:\n{string.Join("\n", detallesAportaciones.Select((d, index) => $"{index + 1}. Fecha: {d.FechaAportacion.ToShortDateString()}, Valor: {d.Valor.ToString("N2")}"))}"
-                                    : $"\"{aportacion.Key}\" realizó una aportación: {valor.ToString("N2")}\nFecha: {usuarioAportacion?.FechaAportacion.ToShortDateString()}";
+                                    ? $"Total de Aportaciones: {valor.ToString("N2")}.\n\"{aportacion.Key}\" realizó {detallesAportaciones.Count} aportaciones:\n{string.Join("\n", detallesAportaciones.Select((d, index) => $"{index + 1}. Fecha: {d.FechaAportacion.ToShortDateString()}  - Cuadrante {d.Cuadrante}, Valor: {d.Valor.ToString("N2")}"))}"
+                                    : $"\"{aportacion.Key}\" realizó una aportación: {valor.ToString("N2")}\nFecha: {usuarioAportacion?.FechaAportacion.ToShortDateString()} - Cuadrante {usuarioAportacion?.DetallesAportaciones.FirstOrDefault()?.Cuadrante}";
                                     <td class="aportacion-cell"
                                         data-mensaje-sin-aportes="@mensajeSinAportes"
                                         data-mensaje-con-aportes="@mensajeConAportes">
