Vista de Aportartes Parte 1 (cambios).

--- a/act_Application/Views/Aportar/Aportar.cshtml
+++ b/act_Application/Views/Aportar/Aportar.cshtml
@@ -33,7 +33,8 @@
             <div class="error-message">Rango de números mínimo 8 y máximo 12</div>
 
             <label class="date-label">Fecha de Hoy:</label>
-            <label id="fechaActual"></label>
+            <div id="current_date">
+                </p>
 
             <label for="razon">Razón:</label>
             <select id="razon" name="razon" required>
