--- a/act_Application/wwwroot/css/General/aportar.css
+++ b/act_Application/wwwroot/css/General/aportar.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿.body {
     font-family: Arial, sans-serif;
 }
 
@@ -10,32 +10,36 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
+.input-container {
+    position: relative;
+}
+
 label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-select, input[type="text"], input[type="number"], input[type="file"] {
+select, .input-monto, .input-cuenta, .input-file {
     width: 100%;
-    padding: 8px;
+    padding: 8px 8px 8px 30px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }
 
-    input[type="number"]::-webkit-inner-spin-button,
-    input[type="number"]::-webkit-outer-spin-button {
+    input-cuenta::-webkit-inner-spin-button,
+    input-cuenta::-webkit-outer-spin-button {
         -webkit-appearance: none;
         margin: 0;
     }
 
 .dollar-sign {
     position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 5px;
+    left: 15px;
+    z-index: 1;
 }
 
 .error-message {
@@ -44,29 +48,39 @@ select, input[type="text"], input[type="number"], input[type="file"] {
     display: none;
 }
 
-.date-label {
-    font-weight: normal;
+.date {
+    justify-content: center;
+    text-align:center;
+    align-content:center;
 }
 
 .buttons {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-}
-
-button {
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    justify-content: center;
 }
 
 .save-button {
     background-color: #4CAF50;
     color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 20px;
+    margin-left: 20px;
+    justify-content: center;
 }
 
 .clear-button {
     background-color: #f44336;
     color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 20px;
+    margin-right: 20px;
+    justify-content:center;
 }
