--- a/act_Application/Views/ActAportaciones/Delete.cshtml
+++ b/act_Application/Views/ActAportaciones/Delete.cshtml
@@ -36,6 +36,14 @@
             <td class="titulo">Id del Usuario</td>
             <td class="texto">@Html.DisplayFor(model => model.CapturaPantalla)</td>
         </tr>
+        <tr>
+            <td class="titulo">Cuenta Bancaria</td>
+            <td class="texto"> @Html.DisplayFor(model => model.Cbancaria)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Nombre del Banco</td>
+            <td class="texto"> @Html.DisplayFor(model => model.Nbanco)</td>
+        </tr>
     </table>
 </div>
 <div class="btn-container">
