--- a/act_Application/Views/ActAportaciones/Edit.cshtml
+++ b/act_Application/Views/ActAportaciones/Edit.cshtml
@@ -38,6 +38,9 @@
                     <label asp-for="FechaAportacion" class="control-label">Fecha de Aporte</label>
                     <input asp-for="FechaAportacion" class="form-control" />
                     <span asp-validation-for="FechaAportacion" class="text-danger"></span>
+                    @{
+                        act_Application.Logica.ComplementosLogicos.ObtenerCuadrante.CalcularCuadrantesAportacione(Model);
+                    }
                 </div>
 
                 <div class="form-group">
@@ -49,6 +52,16 @@
                     <label asp-for="CapturaPantalla" class="control-label">Captura de Pantalla</label>
                     <input asp-for="CapturaPantalla" class="form-control" />
                     <span asp-validation-for="CapturaPantalla" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Cbancaria" class="control-label">Cuenta Bancaria</label>
+                    <input asp-for="Cbancaria" class="form-control" />
+                    <span asp-validation-for="Cbancaria" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Nbanco" class="control-label">Cuenta de Banco</label>
+                    <input asp-for="Nbanco" class="form-control" />
+                    <span asp-validation-for="Nbanco" class="text-danger"></span>
                 </div>
                 <div class="btn-container">
                     <input type="submit" value="Guardar" class="btn" />
