--- a/act_Application/Views/ActAportaciones/Index.cshtml
+++ b/act_Application/Views/ActAportaciones/Index.cshtml
@@ -35,6 +35,12 @@
                     Aprobacion
                 </th>
                 <th>
+                    Cuenta Bancaria
+                </th>
+                <th>
+                    Banco
+                </th>
+                <th>
                     Captura de Pantalla
                 </th>
                 <th>
@@ -60,6 +66,12 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Aprobacion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cbancaria)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nbanco)
                     </td>
                     <td>
                         @if (item.CapturaPantalla != null && item.CapturaPantalla.Length > 0)
